csbind/src/joltc.rs

pub type JPH_TraceFunc =
    ::std::option::Option<unsafe extern "C" fn(mssage: *const ::std::os::raw::c_char)>;
pub type JPH_AssertFailureFunc = ::std::option::Option<
    unsafe extern "C" fn(
        expression: *const ::std::os::raw::c_char,
        mssage: *const ::std::os::raw::c_char,
        file: *const ::std::os::raw::c_char,
        line: u32,
    ) -> bool,
>;
extern "C" {
    pub fn JPH_Init() -> bool;
}
extern "C" {
    pub fn JPH_Shutdown();
}
extern "C" {
    pub fn JPH_SetTraceHandler(handler: JPH_TraceFunc);
}
extern "C" {
    pub fn JPH_SetAssertFailureHandler(handler: JPH_AssertFailureFunc);
}
extern "C" {
    pub fn JPH_BroadPhaseLayerInterfaceMask_Create(
        numBroadPhaseLayers: u32,
    ) -> *mut JPH_BroadPhaseLayerInterface;
}
extern "C" {
    pub fn JPH_BroadPhaseLayerInterfaceMask_ConfigureLayer(
        bpInterface: *mut JPH_BroadPhaseLayerInterface,
        broadPhaseLayer: JPH_BroadPhaseLayer,
        groupsToInclude: u32,
        groupsToExclude: u32,
    );
}
extern "C" {
    pub fn JPH_BroadPhaseLayerInterfaceTable_Create(
        numObjectLayers: u32,
        numBroadPhaseLayers: u32,
    ) -> *mut JPH_BroadPhaseLayerInterface;
}
extern "C" {
    pub fn JPH_BroadPhaseLayerInterfaceTable_MapObjectToBroadPhaseLayer(
        bpInterface: *mut JPH_BroadPhaseLayerInterface,
        objectLayer: JPH_ObjectLayer,
        broadPhaseLayer: JPH_BroadPhaseLayer,
    );
}
extern "C" {
    pub fn JPH_ObjectLayerPairFilterMask_Create() -> *mut JPH_ObjectLayerPairFilter;
}
extern "C" {
    pub fn JPH_ObjectLayerPairFilterMask_GetObjectLayer(group: u32, mask: u32) -> JPH_ObjectLayer;
}
extern "C" {
    pub fn JPH_ObjectLayerPairFilterMask_GetGroup(layer: JPH_ObjectLayer) -> u32;
}
extern "C" {
    pub fn JPH_ObjectLayerPairFilterMask_GetMask(layer: JPH_ObjectLayer) -> u32;
}
extern "C" {
    pub fn JPH_ObjectLayerPairFilterTable_Create(
        numObjectLayers: u32,
    ) -> *mut JPH_ObjectLayerPairFilter;
}
extern "C" {
    pub fn JPH_ObjectLayerPairFilterTable_DisableCollision(
        objectFilter: *mut JPH_ObjectLayerPairFilter,
        layer1: JPH_ObjectLayer,
        layer2: JPH_ObjectLayer,
    );
}
extern "C" {
    pub fn JPH_ObjectLayerPairFilterTable_EnableCollision(
        objectFilter: *mut JPH_ObjectLayerPairFilter,
        layer1: JPH_ObjectLayer,
        layer2: JPH_ObjectLayer,
    );
}
extern "C" {
    pub fn JPH_ObjectLayerPairFilterTable_ShouldCollide(
        objectFilter: *mut JPH_ObjectLayerPairFilter,
        layer1: JPH_ObjectLayer,
        layer2: JPH_ObjectLayer,
    ) -> bool;
}
extern "C" {
    pub fn JPH_ObjectVsBroadPhaseLayerFilterMask_Create(
        broadPhaseLayerInterface: *const JPH_BroadPhaseLayerInterface,
    ) -> *mut JPH_ObjectVsBroadPhaseLayerFilter;
}
extern "C" {
    pub fn JPH_ObjectVsBroadPhaseLayerFilterTable_Create(
        broadPhaseLayerInterface: *mut JPH_BroadPhaseLayerInterface,
        numBroadPhaseLayers: u32,
        objectLayerPairFilter: *mut JPH_ObjectLayerPairFilter,
        numObjectLayers: u32,
    ) -> *mut JPH_ObjectVsBroadPhaseLayerFilter;
}
extern "C" {
    pub fn JPH_DrawSettings_InitDefault(settings: *mut JPH_DrawSettings);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_PhysicsSystemSettings {
    pub maxBodies: u32,
    pub numBodyMutexes: u32,
    pub maxBodyPairs: u32,
    pub maxContactConstraints: u32,
    pub _padding: u32,
    pub broadPhaseLayerInterface: *mut JPH_BroadPhaseLayerInterface,
    pub objectLayerPairFilter: *mut JPH_ObjectLayerPairFilter,
    pub objectVsBroadPhaseLayerFilter: *mut JPH_ObjectVsBroadPhaseLayerFilter,
}
#[test]
fn bindgen_test_layout_JPH_PhysicsSystemSettings() {
    const UNINIT: ::std::mem::MaybeUninit<JPH_PhysicsSystemSettings> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<JPH_PhysicsSystemSettings>(),
        48usize,
        concat!("Size of: ", stringify!(JPH_PhysicsSystemSettings))
    );
    assert_eq!(
        ::std::mem::align_of::<JPH_PhysicsSystemSettings>(),
        8usize,
        concat!("Alignment of ", stringify!(JPH_PhysicsSystemSettings))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).maxBodies) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSystemSettings),
            "::",
            stringify!(maxBodies)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).numBodyMutexes) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSystemSettings),
            "::",
            stringify!(numBodyMutexes)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).maxBodyPairs) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSystemSettings),
            "::",
            stringify!(maxBodyPairs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).maxContactConstraints) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSystemSettings),
            "::",
            stringify!(maxContactConstraints)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._padding) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSystemSettings),
            "::",
            stringify!(_padding)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).broadPhaseLayerInterface) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSystemSettings),
            "::",
            stringify!(broadPhaseLayerInterface)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).objectLayerPairFilter) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSystemSettings),
            "::",
            stringify!(objectLayerPairFilter)
        )
    );
    assert_eq!(
        unsafe {
            ::std::ptr::addr_of!((*ptr).objectVsBroadPhaseLayerFilter) as usize - ptr as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(JPH_PhysicsSystemSettings),
            "::",
            stringify!(objectVsBroadPhaseLayerFilter)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JPH_PhysicsSettings {
    pub maxInFlightBodyPairs: ::std::os::raw::c_int,
    pub stepListenersBatchSize: ::std::os::raw::c_int,
    pub stepListenerBatchesPerJob: ::std::os::raw::c_int,
    pub baumgarte: f32,
    pub speculativeContactDistance: f32,
    pub penetrationSlop: f32,
    pub linearCastThreshold: f32,
    pub linearCastMaxPenetration: f32,
    pub manifoldToleranceSq: f32,
    pub maxPenetrationDistance: f32,
    pub bodyPairCacheMaxDeltaPositionSq: f32,
    pub bodyPairCacheCosMaxDeltaRotationDiv2: f32,
    pub contactNormalCosMaxDeltaRotation: f32,
    pub contactPointPreserveLambdaMaxDistSq: f32,
    pub numVelocitySteps: u32,
    pub numPositionSteps: u32,
    pub minVelocityForRestitution: f32,
    pub timeBeforeSleep: f32,
    pub pointVelocitySleepThreshold: f32,
    pub deterministicSimulation: bool,
    pub constraintWarmStart: bool,
    pub useBodyPairContactCache: bool,
    pub useManifoldReduction: bool,
    pub useLargeIslandSplitter: bool,
    pub allowSleeping: bool,
    pub checkActiveEdges: bool,
}
